--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "sass": "^1.56.1",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "laravel-datatables-vite": "^0.5.2"
     }
 }
